--- a/src/Store.Application/Store.Application.csproj
+++ b/src/Store.Application/Store.Application.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="UseCases\User\CreateUser\Common\UserOutuput.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="UseCases\User\CreateUser\Common\UserOutuput.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.0" />
+  </ItemGroup>
+
 </Project>
