--- a/src/Store.Application/Store.Application.csproj
+++ b/src/Store.Application/Store.Application.csproj
@@ -8,15 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="UseCases\User\CreateUser\Common\UserOutuput.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="UseCases\User\CreateUser\Common\UserOutuput.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Store.Domain\Store.Domain.csproj" />
   </ItemGroup>
 
 </Project>
