refactoring and starting working on api tests

--- a/tests/Store.EndToEndTest/Store.EndToEndTest.csproj
+++ b/tests/Store.EndToEndTest/Store.EndToEndTest.csproj
@@ -20,4 +20,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Store.Tests.Shared\Store.Tests.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
