--- a/tests/Store.Tests.Shared/Store.Tests.Shared.csproj
+++ b/tests/Store.Tests.Shared/Store.Tests.Shared.csproj
@@ -9,10 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Store.Domain\Store.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Store.Infra.Data.EF\Store.Infra.Data.EF.csproj" />
   </ItemGroup>
 
 </Project>
