--- a/tests/Store.EndToEndTest/Store.EndToEndTest.csproj
+++ b/tests/Store.EndToEndTest/Store.EndToEndTest.csproj
@@ -32,4 +32,10 @@
     <Folder Include="Api\User\CreateUser\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
