--- a/src/Store.Application/Store.Application.csproj
+++ b/src/Store.Application/Store.Application.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\Store.Domain\Store.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\Delivery\CompleteDelivery\" />
+    <Folder Include="UseCases\Delivery\StartDelivery\" />
+  </ItemGroup>
+
 </Project>
